# XRDdatapipeline

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  GSASII_LICENSE  HISTORY.rst  LICENSE  Makefile  README.rst  mask_widget.py  pipeline.py  pyproject.toml  pyqtgraph_layout.py  requirements.txt  tox.ini  view.py
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  tutorials.rst  usage.rst
docs/GuiliangJun25_tutorial/: MA2-00001.tif.metadata  MA2-00002.tif.metadata  MA2-00003.tif.metadata  MA2b-00001.tif.metadata  MA2b-00002.tif.metadata  MA2b-00003.tif.metadata  MA2b-00004.tif.metadata  MA2b-00005.tif.metadata  MA2b-00006.tif.metadata  MA2b-00007.tif.metadata
docs/GuiliangJun25_tutorial/configs/: 18839-ICSD Profile Al delta.txt  CeO2_coincell_d900-00000.imctrl  insitu_mask.tif
docs/GuiliangJun25_tutorial_output/integrals/: MA2-00001_arcsmasked.chi  MA2-00001_base.chi  MA2-00001_om.chi  MA2-00001_spotsmasked.chi  MA2-00002_arcsmasked.chi  MA2-00002_base.chi  MA2-00002_om.chi  MA2-00002_spotsmasked.chi  MA2-00003_arcsmasked.chi  MA2-00003_base.chi  MA2-00003_om.chi  MA2-00003_spotsmasked.chi  MA2b-00001_arcsmasked.chi  MA2b-00001_base.chi  MA2b-00001_om.chi  MA2b-00001_spotsmasked.chi  MA2b-00002_arcsmasked.chi  MA2b-00002_base.chi  (+22 more)
sources/: fmask.c  setup.py
src/xrdpipeline/: GSASII_imports.py  __init__.py  cache_creation.py  classification.py  cli.py  corrections_and_maps.py  mask_widget.py  pipeline.py  pipeline_queue.py  pyqtgraph_layout.py  spottiness.py  view.py
tests/: __init__.py  test_xrdpipeline.py
(+87 files in other folders)
