[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xrdpipeline"
version = "0.1.0"
description = "A package for XRD data masking and reduction"
readme = "README.rst"
authors = [
  {name = "Anna Henckel Merritt", email = "amerritt@anl.gov"}
  {name = "Miaoqi Chu", email = "mqichu@anl.gov"}
]
maintainers = [
  {name = "Anna Henckel Merritt", email = "amerritt@anl.gov"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

homepage = "https://github.com/ahmerritt/XRDdatapipeline/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

